--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,4 @@
-background: rgb(2,0,36);
-background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(105,105,237,1) 35%, rgba(0,212,255,1) 100%); 
+
+body {
+  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(105,105,237,1) 35%, rgba(0,212,255,1) 100%); 
+}
